@@ -16,9 +16,9 @@ public class DropdownMasterServiceImpl implements MasterDropdownService{
     DropdownMasterRepository dropdownMasterRepository;
 
     public List<DropdownDTO> getByType(String type) {
-        return dropdownMasterRepository.findByTypeAndStatus(type, 1)
+        return dropdownMasterRepository.findByTypeIgnoreCaseAndStatusOrderByIdAsc(type, 1)
                 .stream()
                 .map(d -> new DropdownDTO(d.getId(), d.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
